Adding Registration interface

--- a/user-app/public/homepage.html
+++ b/user-app/public/homepage.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Homepage</h1>
-    <p>Benvenuto nella homepage <a href='/persone'>Vai a persone</a> </p>
+    <p>Benvenuto nella homepage: <a href='/consumptions'>Track your consumptions!</a> </p>
 </body>
 </html>
