--- a/user-app/public/registration.html
+++ b/user-app/public/registration.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="final.css">  
     <title>Monitoring Service Registration</title>
    
   </head>
@@ -9,12 +12,10 @@
     <h2>Monitoring Service User Registration</h2>
       
     <form>
-      <label for="fname">First name:</label><br>
+      <label for="fname">USERNAME</label><br>
       <input type="text" id="fname" name="fname"><br>
-      <label for="lname">Last name:</label><br>
+      <label for="lname">PASSWORD</label><br>
       <input type="text" id="lname" name="lname""><br><br>
-      <label for="lname">User name:</label><br>
-      <input type="text" id="uname" name="uname"><br><br>
       <button onclick="handleRegistration()">Submit</button>
     </form> 
 
