I've changed the style of the login page

--- a/user-app/public/registration.html
+++ b/user-app/public/registration.html
@@ -9,16 +9,24 @@
    
   </head>
   <body>
-    <h2>Monitoring Service User Registration</h2>
+    <div class="container">
+      <div class="sinistra">
+        <h2 class="testo-sinistra">testo a caso</h2>
+      </div>
+      <div class="destra">
+        <div class="login">
+        <h2>Monitoring Service User Registration</h2>
       
-    <form>
-      <label for="fname">USERNAME</label><br>
-      <input type="text" id="fname" name="fname"><br>
-      <label for="lname">PASSWORD</label><br>
-      <input type="text" id="lname" name="lname""><br><br>
-      <button onclick="handleRegistration()">Submit</button>
-    </form> 
-
+          <form class="form">
+            <label for="fname">USERNAME</label><br>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="lname">PASSWORD</label><br>
+            <input type="text" id="lname" name="lname""><br><br>
+            <button onclick="handleRegistration()">Submit</button>
+          </form> 
+        </div>
+      </div>
+    </div>
     <p id="result"></p>
 
 
