authentication through user&pass(4 accounts)

--- a/user-app/public/registration.html
+++ b/user-app/public/registration.html
@@ -15,14 +15,15 @@
       </div>
       <div class="destra">
         <div class="login">
+        <script src="script.js"></script>
         <h2>Monitoring Service User Registration</h2>
       
           <form class="form">
             <label for="fname">USERNAME</label><br>
             <input type="text" id="fname" name="fname"><br>
             <label for="lname">PASSWORD</label><br>
-            <input type="text" id="lname" name="lname""><br><br>
-            <button onclick="handleRegistration()">Submit</button>
+            <input type="text" id="lname" name="lname"><br><br>
+            <button onclick="handleLogin()">Submit</button>
           </form> 
         </div>
       </div>
