relevant changes on pages style

--- a/user-app/public/homepage.html
+++ b/user-app/public/homepage.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="final.css">
     <title>HomePage</title>
 
+    
         <!--Load the AJAX API-->
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
         <script type="text/javascript">
@@ -37,14 +39,40 @@
     </script>
 </head>
 <body onload="homePageElem()">
+
+  <header>
+  <!--barra in alto che non si sposta mai-->
+    <nav id="navbar">  
+    <!--logo-->
+    <a href="homepage.html"><img id="logo" src="logo.jpg" alt="logo"></a>
+    <!--barra delle opzioni del menù-->
+      <ul class="nav-menu">
+        <li class="nav-item">
+          <a href="homepage.html" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="consumptions.html" class="nav-link">Consumptions</a>
+        </li>
+        <li class="nav-item">
+          <a href="billing.html" class="nav-link">Billing</a>
+        </li>
+        <li class="nav-item">
+            <a href="profile.html" class="nav-link">Profile</a>  
+        </li>
+      </ul>
+
+    </nav>
+  </header>
     <script src="script.js"></script>
-    <h1>Homepage</h1>
-    <p id="user">Benvenuto nella homepage: <a href='/consumptions'>Track your consumptions!</a> </p>
-    <p id="todayMSG">Today is... and you've already spent...</p>
-    <table class="columns">
-        <tr>
-          <td><div id="piechart_div" style="border: 1px solid #ccc"></div></td>
-        </tr>
-    </table>
+    <div class="home">
+      <h1>Homepage</h1>
+      <p id="user">Welcome back user</p> <a href="consumptions.html">Track your consumptions!</a>
+      <p id="todayMSG">Today is... and you've already spent...</p>
+      <table class="columns">
+          <tr>
+            <td><div id="piechart_div" style="border: 1px solid #ccc"></div></td>
+          </tr>
+      </table>
+    </div>
 </body>
 </html>
