--- a/user-app/public/gas.html
+++ b/user-app/public/gas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="final.css">
     <title>Gas</title>
 
     <!--Load the AJAX API-->
@@ -51,6 +52,29 @@
     </script>
 </head>
 <body>
+  <header>
+    <!--barra in alto che non si sposta mai-->
+      <nav id="navbar">  
+      <!--logo-->
+      <a href="homepage.html"><img id="logo" src="logo.jpg" alt="logo"></a>
+      <!--barra delle opzioni del menù-->
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="homepage.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="consumptions.html" class="nav-link">Consumptions</a>
+          </li>
+          <li class="nav-item">
+            <a href="billing.html" class="nav-link">Billing</a>
+          </li>
+          <li class="nav-item">
+              <a href="profile.html" class="nav-link">Profile</a>  
+          </li>
+        </ul>
+  
+      </nav>
+    </header>
     <h1>Gas</h1>
     <p>Gas Monthly Consumption per Day</p>
 
