--- a/user-app/public/water.html
+++ b/user-app/public/water.html
@@ -51,6 +51,29 @@
     </script>
 </head>
 <body>
+  <header>
+    <!--barra in alto che non si sposta mai-->
+      <nav id="navbar">  
+      <!--logo-->
+      <a href="homepage.html"><img id="logo" src="logo.jpg" alt="logo"></a>
+      <!--barra delle opzioni del menù-->
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="homepage.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="consumptions.html" class="nav-link">Consumptions</a>
+          </li>
+          <li class="nav-item">
+            <a href="billing.html" class="nav-link">Billing</a>
+          </li>
+          <li class="nav-item">
+              <a href="profile.html" class="nav-link">Profile</a>  
+          </li>
+        </ul>
+  
+      </nav>
+    </header>
     <h1>Water</h1>
     <p>Water Monthly Consumption per Day</p>
 
