nodemon modules+link login&homepage+minor changes

--- a/user-app/public/registration.html
+++ b/user-app/public/registration.html
@@ -22,7 +22,7 @@
             <label for="fname">USERNAME</label><br>
             <input type="text" id="fname" name="fname"><br>
             <label for="lname">PASSWORD</label><br>
-            <input type="text" id="lname" name="lname"><br><br>
+            <input type="password" id="lname" name="lname"><br><br>
             <button onclick="handleLogin()">Submit</button>
           </form> 
         </div>
