--- a/user-app/public/homepage.html
+++ b/user-app/public/homepage.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="final.css">
     <title>HomePage</title>
 
-    
+        <script src="script.js"></script>
         <!--Load the AJAX API-->
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
         <script type="text/javascript">
+          console.log("prova "+tempName)
         // Load Charts and the corechart and barchart packages.
         google.charts.load('current', {'packages':['corechart']});
 
@@ -63,7 +64,6 @@
 
     </nav>
   </header>
-    <script src="script.js"></script>
     <div class="home">
       <h1>Homepage</h1>
       <p id="user">Welcome back user</p> <a href="consumptions.html">Track your consumptions!</a>
