--- a/user-app/public/water.html
+++ b/user-app/public/water.html
@@ -21,26 +21,32 @@
       // draws it.
       function drawLineWater() {
 
+        totWater = 0
         // Create the data table.
         var data = new google.visualization.DataTable();
         data.addColumn('number', 'X');
         data.addColumn('number', 'Cons.Level');
-        data.addRows([
+        for(let i = 0; i<31; i++){
+            var r1 = Math.random(); //una famiglia di 4 persone consuma in media in un anno 365mc, quindi 1mc al giorno
+            data.addRows([[i,r1]])
+            totWater += r1
+        }
+        /*data.addRows([
         [0, 0],   [1, 10],  [2, 23],  [3, 17],  [4, 18],  [5, 9],
         [6, 11],  [7, 27],  [8, 33],  [9, 40],  [10, 32], [11, 35],
         [12, 30], [13, 40], [14, 42], [15, 47], [16, 44], [17, 48],
         [18, 52], [19, 54], [20, 42], [21, 55], [22, 56], [23, 57],
         [24, 60], [25, 50], [26, 52], [27, 51], [28, 49], [29, 53],
         [30, 55], [31,60]
-        ]);
+        ]);*/
 
         // Set chart options
         var options = {'title':'Monthly Water Consumptions',
                        hAxis: {
-          title: 'Date'
+          title: 'Day'
         },
                        vAxis: {
-          title: 'Consumption'
+          title: 'Consumption (mc)'
         }
     };
 
