--- a/user-app/public/gas.html
+++ b/user-app/public/gas.html
@@ -60,22 +60,22 @@
 <body>
   <header>
     <!--barra in alto che non si sposta mai-->
-      <nav id="navbar">  
+      <nav>  
       <!--logo-->
       <a href="homepage.html"><img id="logo" src="logo.jpg" alt="logo"></a>
       <!--barra delle opzioni del menù-->
-        <ul class="nav-menu">
-          <li class="nav-item">
-            <a href="homepage.html" class="nav-link">Home</a>
+        <ul>
+          <li>
+            <a href="homepage.html">Home</a>
           </li>
-          <li class="nav-item">
-            <a href="consumptions.html" class="nav-link">Consumptions</a>
+          <li >
+            <a href="consumptions.html">Consumptions</a>
           </li>
-          <li class="nav-item">
-            <a href="billing.html" class="nav-link">Billing</a>
+          <li>
+            <a href="billing.html">Billing</a>
           </li>
-          <li class="nav-item">
-              <a href="profile.html" class="nav-link">Profile</a>  
+          <li>
+              <a href="profile.html">Profile</a>  
           </li>
         </ul>
   
