--- a/user-app/public/homepage.html
+++ b/user-app/public/homepage.html
@@ -10,7 +10,7 @@
         <script src="script.js"></script>
         <!--Load the AJAX API-->
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-        <script type="text/javascript">
+        <!--        <script type="text/javascript">
           console.log("prova "+tempName)
         // Load Charts and the corechart and barchart packages.
         google.charts.load('current', {'packages':['corechart']});
@@ -20,7 +20,7 @@
 
         function drawChart() {
 
-        var data = new google.visualization.DataTable();
+        var data = new google.visualization.DataTable();                    DA TENERE PER IL MOMENTO
         data.addColumn('string', 'Topping');
         data.addColumn('number', 'Slices');
         data.addRows([
@@ -37,7 +37,7 @@
         piechart.draw(data, piechart_options);
 
         }
-    </script>
+    </script>                    -->
 </head>
 <body onload="homePageElem()">
 
