--- a/user-app/public/homepage.html
+++ b/user-app/public/homepage.html
@@ -8,6 +8,7 @@
     <title>HomePage</title>
 
         <script src="script.js"></script>
+        <script src="consumption.js"></script>
         <!--Load the AJAX API-->
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
         <!--        <script type="text/javascript">
