--- a/user-app/public/gas.html
+++ b/user-app/public/gas.html
@@ -22,9 +22,6 @@
           <li>
             <a href="homepage.html">Home</a>
           </li>
-          <li >
-            <a href="consumptions.html">Consumptions</a>
-          </li>
           <li>
             <a href="billing.html">Billing</a>
           </li>
@@ -67,14 +64,31 @@
           label: 'Consumption (smc)',
           backgroundColor: 'rgb(255, 99, 132)',
           borderColor: 'rgb(255, 99, 132)',
+          pointBackgroundColor: 'black',
           data: consu,
+          fill: true, 
+          tension: 0.3,
         }]
       };
 
       const config = {
         type: 'line',
         data: data,
-        options: {}
+        options: {
+          radius: 5,
+          hitRadius: 30,
+          hoverRadius: 15,
+          responsive: true,
+          scales: {
+            y: {
+              ticks: {
+                callback: function (value) {
+                  return value + " smc";
+                }
+              }
+            }
+          }
+        }
       };
     </script>
     <script>
