changes in style

--- a/user-app/public/billing.html
+++ b/user-app/public/billing.html
@@ -8,30 +8,31 @@
     <title>Contatti</title>
 </head>
 <body>
-    <header>
-        <!--barra in alto che non si sposta mai-->
-          <nav id="navbar">  
-          <!--logo-->
-          <a href="homepage.html"><img id="logo" src="logo.jpg" alt="logo"></a>
-          <!--barra delle opzioni del menù-->
-            <ul class="nav-menu">
-              <li class="nav-item">
-                <a href="homepage.html" class="nav-link">Home</a>
-              </li>
-              <li class="nav-item">
-                <a href="consumptions.html" class="nav-link">Consumptions</a>
-              </li>
-              <li class="nav-item">
-                <a href="billing.html" class="nav-link">Billing</a>
-              </li>
-              <li class="nav-item">
-                  <a href="profile.html" class="nav-link">Profile</a>  
-              </li>
-            </ul>
-      
-          </nav>
-        </header>
-    <h1>Billing</h1>
-    <p>Qui avremo la pagina pagamenti</p>
-</body>
+  <header>
+    <!--barra in alto che non si sposta mai-->
+        
+      <!--logo-->
+      <a href="homepage.html"><img id="logo" src="logo.jpg" alt="logo"></a>
+      <!--barra delle opzioni del menù-->
+      <nav>
+        <ul>
+          <li>
+            <a href="homepage.html">Home</a>
+          </li>
+          <li>
+            <a href="billing.html">Billing</a>
+          </li>
+          <li>
+              <a href="profile.html">Profile</a>  
+          </li>
+        </ul>
+  
+      </nav>
+    </header>
+
+    <div class="billing">
+      <h1>Billing</h1>
+      <p>In this page all the invoices can be paid, trough the use of nexi api</p>
+    </div>
+  </body>
 </html>
