--- a/user-app/public/elett.html
+++ b/user-app/public/elett.html
@@ -13,10 +13,11 @@
 <body>
   <header>
     <!--barra in alto che non si sposta mai-->
-      <nav>  
+        
       <!--logo-->
       <a href="homepage.html"><img id="logo" src="logo.jpg" alt="logo"></a>
       <!--barra delle opzioni del menù-->
+      <nav>
         <ul>
           <li>
             <a href="homepage.html">Home</a>
@@ -31,13 +32,12 @@
   
       </nav>
     </header>
-    <h1>Electricity</h1>
-    <p>Electricity Monthly Consumption per Day</p>
-
-    <div>
-      <canvas id="consChart"></canvas>
+    <div class="titols">
+      <h1>Electricity</h1>
+      <p>Electricity Monthly Consumption per Day</p>
     </div>
-    <div>
+    <div class="graphs">
+      <canvas id="consChart"></canvas>
       <canvas id="monthChart"></canvas>
     </div>
 
