--- a/user-app/public/registration.html
+++ b/user-app/public/registration.html
@@ -11,7 +11,9 @@
   <body>
     <div class="container">
       <div class="sinistra">
-        <h2 class="testo-sinistra">testo a caso</h2>
+        <div></div>
+        <h1 class="testo-sinistra">Nome del sito</h1>
+        <h2 class="testo-sinistra">The best tool to monitor your consumptions in real time</h2>
       </div>
       <div class="destra">
         <div class="login">
