--- a/user-app/public/water.html
+++ b/user-app/public/water.html
@@ -13,10 +13,11 @@
 <body>
   <header>
     <!--barra in alto che non si sposta mai-->
-      <nav>  
+        
       <!--logo-->
       <a href="homepage.html"><img id="logo" src="logo.jpg" alt="logo"></a>
       <!--barra delle opzioni del menù-->
+      <nav>
         <ul>
           <li>
             <a href="homepage.html">Home</a>
@@ -31,13 +32,12 @@
   
       </nav>
     </header>
+    <div class="titols">
     <h1>Water</h1>
     <p>Water Monthly Consumption per Day</p>
-
-    <div>
+  </div>
+    <div class="graphs">
       <canvas id="consChart"></canvas>
-    </div>
-    <div>
       <canvas id="monthChart"></canvas>
     </div>
 
