bar charts color changed

--- a/user-app/public/elett.html
+++ b/user-app/public/elett.html
@@ -114,7 +114,7 @@
         datasets: [{
           label: 'Total Consumption/month (kWh)',
           data: monthArr,
-          backgroundColor: 'rgb(255, 99, 132)',
+          backgroundColor: '#F7E91A',
           borderColor: 'rgb(255, 99, 132)',
           borderWidth: 1,
         }]
