--- a/user-app/public/gas.html
+++ b/user-app/public/gas.html
@@ -114,7 +114,7 @@
         datasets: [{
           label: 'Total Consumption/month (smc)',
           data: monthArr,
-          backgroundColor: 'rgb(255, 99, 132)',
+          backgroundColor: '#7C7C7C',
           borderColor: 'rgb(255, 99, 132)',
           borderWidth: 1,
         }]
