--- a/user-app/public/water.html
+++ b/user-app/public/water.html
@@ -114,7 +114,7 @@
         datasets: [{
           label: 'Total Consumption/month (mc)',
           data: monthArr,
-          backgroundColor: 'rgb(255, 99, 132)',
+          backgroundColor: '#4478DF',
           borderColor: 'rgb(255, 99, 132)',
           borderWidth: 1,
         }]
