some design changes

--- a/user-app/public/homepage.html
+++ b/user-app/public/homepage.html
@@ -17,7 +17,7 @@
   <!--barra in alto che non si sposta mai-->
       
     <!--logo-->
-    <a href="homepage.html"><img id="logo" src="logo.jpg" alt="logo"></a>
+    <a href="homepage.html"><img id="logo" src="logo.png" alt="logo"></a>
     <!--barra delle opzioni del menù-->
     <nav>
       <ul>
@@ -35,7 +35,7 @@
     </nav>
   </header>
     <div class="home">
-      <h1>Homepage</h1>
+      <p></p>
       <p id="user">Welcome back user</p> <p> Track your consumptions!</p>
       <p id="todayMSG">Today is... and you've already spent...</p>
       
