--- a/user-app/public/profile.html
+++ b/user-app/public/profile.html
@@ -13,7 +13,7 @@
         <!--barra in alto che non si sposta mai-->
             
           <!--logo-->
-          <a href="homepage.html"><img id="logo" src="logo.jpg" alt="logo"></a>
+          <a href="homepage.html"><img id="logo" src="logo.png" alt="logo"></a>
           <!--barra delle opzioni del menù-->
           <nav>
             <ul>
