--- a/user-app/public/registration.html
+++ b/user-app/public/registration.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="sinistra">
         <div></div>
-        <h1 class="testo-sinistra">Nome del sito</h1>
+        <h1 class="testo-sinistra">*Any energy provider*</h1>
         <h2 class="testo-sinistra">The best tool to monitor your consumptions in real time</h2>
       </div>
       <div class="destra">
