--- a/user-app/public/profile.html
+++ b/user-app/public/profile.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="final.css">
-    <title>HomePage</title>
+    <title>Profile</title>
 </head>
 <body>
 
@@ -32,9 +32,9 @@
         </header>
     
         <div class="titols">
-        <h1>Error</h1>
+        <h1>Profile</h1>
     
-    <p>Error 404: page not found. Torna alla <a href="homepage.html">Homepage</a> </p>
+    <p>Profile page, Work in progress.</a> </p>
 </div>
 </body>
 </html>
